# alphafolio

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy_doc.yml
assets/stylesheets/: extra.css
docs/: index.md
nav/DATA/: index.html
notebooks/: test.ipynb
search/: search_index.json
src/alphafolio/: main.py
